templates/echoserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "${instance_name:=echoserver}"
  labels:
    name: "${instance_name:=echoserver}"
