templates/echoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "${instance_name:=echoserver}"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: "${instance_name:=echoserver}"
