templates/echoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "${instance_name:=echoserver}"
  annotations: 
    "cert-manager.io/cluster-issuer": "letsencrypt-cert-issuer"
spec:
  ingressClassName: traefik
  rules:
  - host: echo.home-network.sort-tree.com
    http:
      paths:
      - path: "/${instance_name:=echoserver}"
        pathType: Prefix
        backend:
          service:
            name: "${instance_name:=echoserver}"
            port:
              number: 80
